[project]
name = "cds"
version = "0.1.0"
description = "A structured schema and REST API (with FastAPI) for the Common Data Set"
readme = "README.md"
authors = [
    { name = "Noah Lowry" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
extraction = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "polars>=1.41.2",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
cds-server = "cds.app:serve"

[tool.ty.environment]
python = ".venv"
